# BotaniTrace

./: README.md
Blockchain/solochain/pallets/herb-registry/: Cargo.toml
Blockchain/solochain/pallets/herb-registry/src/: lib.rs
mobile_app/: package-lock.json  package.json
web_app/: package-lock.json
